placeholder for now -- maybe defer to github wiki or create docs
directory?