@@ -1,2 +1,6 @@
-placeholder for now -- maybe defer to github wiki or create docs
-directory?
+
+2016/08/04
+Changed the github headline to
+Dancing Links exact cover Sudoku Solver with C++ header-only library
+
+Plans to add website!
